Fix show link obstructed by poster link (Fixes #4060) (#4191)
* Fix show title link being obstructed by poster link

Add link to banner

* Fix Season Jump offset, and UI fixes

- Needed to increase offset from target due to changes in the navbar
(two rows instead of one for a total of ~90px)

- Move the Season Jump select down a bit.

- Move the first season table down a bit:
  The header's background was overlapping with the show header. It just looked wrong.

--- a/themes/light/assets/css/style.css
+++ b/themes/light/assets/css/style.css
@@ -1787,7 +1787,7 @@ div.season-scene-exception {
     display: inline;
 }
 
-#showBanner {
+.show-banner {
     float: right;
     height: 50px;
     border: 1px solid rgb(136, 136, 136);
